# bigartm

./: .gitmodules  LICENSE
python/: setup.py
python/artm/: cli.py  master_component.py  model.py
python/artm/model/: __init__.py  api.py  batches.py  regularizers.py  scorers.py
python/artm/wrapper/: messages_pb2.py
src/: CMakeLists.txt
src/artm/: CMakeLists.txt  messages.pb.cc  messages.pb.h  messages.proto
src/artm/core/: cache_manager.cc  cache_manager.h  collection_parser.cc  data_loader.cc  master_component.cc  processor.cc  processor_input.cc  processor_input.h  topic_model.cc  topic_model.h
src/artm/regularizer/: decorrelator_phi.cc  improve_coherence_phi.cc
src/artm/utility/: blas.h  matrix.h
src/artm_tests/: blas_test.cc  collection_parser_test.cc  cpp_interface_test.cc  instance_test.cc  multiple_classes_test.cc
src/bigartm/: CMakeLists.txt  srcmain.cc
src/cpp_client/: srcmain.cc
src/python/artm/: messages_pb2.py
src/python/examples/: example01_synthetic_collection.py  example07_master_component_proxy.py
src/python/tests/: tests.py
test_data/: vocab.parser_test_UTF8.txt
utils/: cpplint_files.txt
